# lerobot_teleoperator_omy

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/lerobot_teleoperator_omy/: __init__.py  config_omy_leader.py  omy_leader.py
tests/: test_omy_leader.py
