[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "lerobot_teleoperator_omy"
version = "0.1.0"
description = "LeRobot teleoperator plugin for the ROBOTIS OMY-L100 6-DoF leader arm (no ROS 2 required)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "charlie8612" }]
keywords = ["lerobot", "robotics", "robotis", "omy", "openmanipulator", "teleoperation", "imitation-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "lerobot",
    "dynamixel-sdk",
]

[project.urls]
Homepage = "https://github.com/charlie8612/lerobot_teleoperator_omy"
Repository = "https://github.com/charlie8612/lerobot_teleoperator_omy"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
